admin/includes/stylesheet.css
/* ... */
a.menuBoxContentLink:link { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.menuBoxContentLink:visited { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.menuBoxContentLink:active { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.menuBoxContentLink:hover { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #cccccc; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}

a.splitPageLink:link { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #0000FF; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.splitPageLink:visited { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #0000FF; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.splitPageLink:active { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #0000FF; 
font-weight: normal; 
text-decoration: none; 
outline: none; 
}
a.splitPageLink:hover { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #0000FF; 
font-weight: normal; 
text-decoration: underline; 
background-color: #FFFF33; 
outline: none; 
}
a.bbc_link {
color: #af417e;
font-weight: inherit;
text-decoration: inherit;
}
a.bbc_link:hover {
text-decoration: underline;
}

/* menu box */
.menuBoxHeading { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
background-color: #f1f1f1; 
}
.menuBoxContent { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #616060; 
}
.longDescription { 
visibility: hidden; 
display: none;
margin: 1px 5px 15px 5px;
}

/* page */
body { 
background-color: #ffffff; 
color: #000000; 
margin: 0px; 
}
.headerBar {
background-color: #cccccc; 
border-color: #000000; 
border-bottom: 2px solid;  
}
.headerBarContent { 
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
font-weight: bold; 
padding: 2px;

}
.columnLeft { 
background-color: #F0F1F1; 
border-color: #999999; 
border-width: 1px; 
border-style: solid; 
padding: 2px; 
}

.columnLeft2 { 
vertical-align: top; 
color: #000000;
width: 200px;
}

.pageHeading { 
font-family: Verdana, Arial, sans-serif; 
font-size: 18px; 
color: #000000; 
font-weight: bold; 
}
.pageHeading .main {
font-weight: normal; 
}

/* data table */
.dataTableHeadingRow {
background-color: #aaa;
color: #000000;
border-bottom: 1px solid;
border-color: #000000;
border-bottom: 1px solid #aaa;
border-top: 1px solid #aaa;
}
.dataTableHeadingRow.sub, .dataTableHeadingRow.sub td {
font-size: 14px;
font-weight: normal;
background-color: #F7F7F7;
border-bottom: 1px solid #aaa;
border-color: #aaa #000000;
border-top: 0px;
border-right: 0;
color: #000000;
text-align: left;
}
.dataTableHeadingContent {
font-family: Verdana, Arial, Helvetica, sans-serif;
font-size: 10px;
font-weight: bold;
padding: 10px 5px!important;
background-color: #ccc;
border-bottom: 1px solid #aaa;
border-top: 1px solid #aaa;
border-right: 1px solid #aaa;
vertical-align: top;
}
.dataTableRow {
background-color: #fff;
height: 35px;
}
tr.dataTableRow:nth-child(2n+1) {
background: none repeat scroll 0 0 #fafafa;
}
.dataTableRowSelected {
background-color: #cdd7b3;
font-weight: bold;
height: 35px;
}
.dataTableRowOver {
background-color: #eee; 
height: 35px;
}
.dataTableRowSub {
background-color: #fff;
height: 35px;
}
tr.dataTableRowSub:nth-child(2n+1) {
background: none repeat scroll 0 0 #fafafa;
}
.dataTableRowSubOver {
background-color: #eee; 
height: 35px;
}

.dataTableContentSub {
border-bottom: 1px dashed #aaa;
color: #000000;
font-family: Verdana,Arial,sans-serif;
font-size: 10px !important;
padding: 5px 2px;
vertical-align: middle !important;
}
.brd-t {
border-top: 1px solid #aaa !important;
}
.brd-none {
background:#f7f7f7 !important;
border: none !important;
}
.dataTableContent {
font-family: Verdana, Arial, sans-serif; 
font-size: 10px !important; 
color: #000000;
vertical-align: middle!important;
border-bottom: 1px solid #aaa;
padding: 5px 2px;
/*text-align: left;*/
}

.dataTableConfig {
font-family: Verdana, Arial, sans-serif; 
font-size: 12px; 
color: #000000;
vertical-align: middle;
border-bottom: 1px dashed #cccccc;
text-align: left;
}

.dataTableConfig a {
font-size: 12px;
font-weight: bold;
text-decoration: underline;
}

td.categories_view_data {
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000;
vertical-align: middle!important;
border-bottom: 1px dashed #cccccc;
text-align: center;
}

.dataTableContent_products {
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
vertical-align: middle!important;
background-color: #FFF2F2;
} 

.dataTableContentRow {
font-family: Verdana, Arial, sans-serif; 
font-size: 10px; 
color: #000000; 
vertical-align: middle!important;
border-bottom: 1px solid;
border-color: #cccccc;
}

/* info box */
.contentTable {
font-family: Verdana, Arial, sans-serif;
font-size: 10px;
color: #333;
width: 100%;
border-collapse: collapse;
background:#eee;
border-top: 1px solid #ccc;
}

.boxRight .contentTable:last-child {
border-top: 0px solid #ccc;
border-bottom: 1px solid #ccc;
margin:0 0 20px 0;
}

.infoBoxHeading{
font-family: Verdana,Arial,Helvetica,sans-serif;
font-size: 10px;
font-weight: bold;
padding: 10px 10px !important;
vertical-align: top;
}
.infoBoxHeadingTitle {
display:block;
border-bottom: 2px solid #af417e;
font-size: 12px;
font-weight: bold;
line-height: 18px;
margin: 0 0 0px;
padding: 0 0 4px;
}

.infoBoxContent{
font-family: Verdana, Arial, sans-serif;
font-size: 10px;
color: #000000;
padding: 4px 10px !important;
}
/* ... */

